can create and display 2 degree comment

--- a/public/locales/zh-CN/common.json
+++ b/public/locales/zh-CN/common.json
@@ -1,62 +1,63 @@
 {
-    "home_title": "Q真相引擎",
-    "button": {
-      "submit": "提交",
-      "cancel": "发送"
-    },
-    "post" : "发布",
-    "TOO_MANY_REQUESTS" : "你在短时间内发出太多请求",
-    "something_went_wrong" : "你运气不好，服务器发生了说不清道不明的错误",
-    "post_too_short" : "你发的内容太短，必须大于一个字",
-    "post_too_long" : "你发的内容太长，必须小于5000字",
-    "professor_videos" : "小明视频",
-    "natural_healing" : "自然疗法",
-    "redpill_academy" : "红药丸学院",
-    "discussion" : "真相引擎",
-    "search" : "搜索",
-    "profile_page" : "个人页面",
-    "settings" : "设置",
-    "view_notifications" : "查看通知",
-    "open_user_menu" : "大开用户菜单",
-    "sign_in" : "登录",
-    "sign_up" : "注册",
-    "sign_out" : "登出",
-    "change_avatar" : "修改头像",
-    "save_changes" : "保存",
-    "username" : "用户名",
-    "username_hint" : "只能包含子母，数字和下划线",
-    "username_error_length" : "长度大于7，小于15",
-    "displayname_error_length" : "长度大于2，小于15",
-    "input_box_empty_or_short" : "内容为空或太短",
-    "username_taken" : "你运气不好，这个用户名早就被用了",
-    "displayname" : "给别人看的名称",
-    "displayname_hint" : "不要写肮脏的词汇，小心被举报",
-    "email" : "电邮地址",
-    "email_taken" : "这个邮件地址已经有人用了",
-    "email_error" : "不要乱写邮件地址",
-    "receive_notification" : "接受小明教授的更新邮件",
-    "receive_notification_desc" : "只有小明更新视频和发布重要信息时你才会受到邮件",
-    "Add_your_comment" : "发表一下你的伟大发现...",
-    "your_mood" : "你的情绪",
-    "add_your_mood" : "选择情绪",
-    "upload_file" : "上传文件",
-    "upload_too_many" : "你能上传的数量是：",
-    "upload_image_too_big" : "你能上传的最大图片是：",
-    "upload_video_too_big" : "你能上传的最大视频是：",
-    "upload_videos_too_big" : "你上传的所有视频总量超过了：",
-    "" : "你上传的所有视频总量超过了：",
-    
-    "register_success" : "注册成功！快去学习争取成为引擎",
-    "private_engine" : "私人引擎",
-    "server_error" : "天有不测风云，服务器出错了",
-    "no_data_found" : "居然找不到任何信息。",
-    "fold" : "收起",
-    "no_comments_found" : "目前没有任何评论，快枪沙发！",
-    "make_simple_comment" : "随便点评一下...",
-    "comment_too_long":"评论太长了，言简意赅，不要超过200字",
-    "see_all_comments":"看所有评论",
-    "replay":"回复",
-    "login_before_like":"登录后才能点赞",
-    
-    "empty":""
-   }
+ "home_title": "Q真相引擎",
+ "button": {
+   "submit": "提交",
+   "cancel": "发送"
+ },
+ "post" : "发布",
+ "TOO_MANY_REQUESTS" : "你在短时间内发出太多请求",
+ "something_went_wrong" : "你运气不好，服务器发生了说不清道不明的错误",
+ "post_too_short" : "你发的内容太短，必须大于一个字",
+ "post_too_long" : "你发的内容太长，必须小于5000字",
+ "professor_videos" : "小明视频",
+ "natural_healing" : "自然疗法",
+ "redpill_academy" : "红药丸学院",
+ "discussion" : "真相引擎",
+ "search" : "搜索",
+ "profile_page" : "个人页面",
+ "settings" : "设置",
+ "view_notifications" : "查看通知",
+ "open_user_menu" : "大开用户菜单",
+ "sign_in" : "登录",
+ "sign_up" : "注册",
+ "sign_out" : "登出",
+ "change_avatar" : "修改头像",
+ "save_changes" : "保存",
+ "username" : "用户名",
+ "username_hint" : "只能包含子母，数字和下划线",
+ "username_error_length" : "长度大于7，小于15",
+ "displayname_error_length" : "长度大于2，小于15",
+ "input_box_empty_or_short" : "内容为空或太短",
+ "username_taken" : "你运气不好，这个用户名早就被用了",
+ "displayname" : "给别人看的名称",
+ "displayname_hint" : "不要写肮脏的词汇，小心被举报",
+ "email" : "电邮地址",
+ "email_taken" : "这个邮件地址已经有人用了",
+ "email_error" : "不要乱写邮件地址",
+ "receive_notification" : "接受小明教授的更新邮件",
+ "receive_notification_desc" : "只有小明更新视频和发布重要信息时你才会受到邮件",
+ "Add_your_comment" : "发表一下你的伟大发现...",
+ "your_mood" : "你的情绪",
+ "add_your_mood" : "选择情绪",
+ "upload_file" : "上传文件",
+ "upload_too_many" : "你能上传的数量是：",
+ "upload_image_too_big" : "你能上传的最大图片是：",
+ "upload_video_too_big" : "你能上传的最大视频是：",
+ "upload_videos_too_big" : "你上传的所有视频总量超过了：",
+ "" : "你上传的所有视频总量超过了：",
+ 
+ "register_success" : "注册成功！快去学习争取成为引擎",
+ "private_engine" : "私人引擎",
+ "server_error" : "天有不测风云，服务器出错了",
+ "no_data_found" : "居然找不到任何信息。",
+ "fold" : "收起",
+ "no_comments_found" : "目前没有任何评论，快枪沙发！",
+ "make_simple_comment" : "随便点评一下...",
+ "comment_too_long":"评论太长了，言简意赅，不要超过200字",
+ "see_all_comments":"看所有评论",
+ "reply_comment":"回复",
+ "login_before_like":"登录后才能点赞",
+ "show_replies":"查看回復",
+ 
+ "empty":""
+}
