adding redux tool kit to save user state globally

--- a/public/locales/zh-CN/common.json
+++ b/public/locales/zh-CN/common.json
@@ -58,6 +58,8 @@
  "reply_comment":"回复",
  "login_before_like":"登录后才能点赞",
  "show_replies":"查看回復",
+ "report":"举报",
+ "delete":"删除",
  
  "empty":""
 }
