--- a/public/locales/zh-CN/common.json
+++ b/public/locales/zh-CN/common.json
@@ -10,6 +10,7 @@
  "post_too_short" : "你发的内容太短，必须大于一个字",
  "post_too_long" : "你发的内容太长，必须小于5000字",
  "professor_videos" : "小明视频",
+ "index" : "真相引擎",
  "natural_healing" : "自然疗法",
  "redpill_academy" : "红药丸学院",
  "discussion" : "真相引擎",
@@ -48,7 +49,7 @@
  
  "register_success" : "注册成功！快去学习争取成为引擎",
  "private_engine" : "私人引擎",
- "server_error" : "天有不测风云，服务器出错了",
+ "server_error" : "天有不测风云，务器出错了",
  "no_data_found" : "居然找不到任何信息。",
  "fold" : "收起",
  "no_comments_found" : "目前没有任何评论，快枪沙发！",
