--- a/public/locales/zh-CN/common.json
+++ b/public/locales/zh-CN/common.json
@@ -59,6 +59,7 @@
  "reply_comment":"回复",
  "login_before_like":"登录后才能点赞",
  "show_replies":"查看回復",
+ "hide_replies":"收起回復",
  "report":"举报",
  "delete":"删除",
  
