quill editor sizing works properly

--- a/public/locales/zh-CN/common.json
+++ b/public/locales/zh-CN/common.json
@@ -26,8 +26,8 @@
  "save_changes" : "保存",
  "username" : "用户名",
  "username_hint" : "只能包含子母，数字和下划线",
- "username_error_length" : "长度大于7，小于15",
- "displayname_error_length" : "长度大于2，小于15",
+ "username_error_length" : "长度大于7, 小于15",
+ "displayname_error_length" : "长度大于2, 小于15",
  "input_box_empty_or_short" : "内容为空或太短",
  "username_taken" : "你运气不好，这个用户名早就被用了",
  "displayname" : "给别人看的名称",
