adding non functioning new post page, tabs for home page, prettier uploder pictures

--- a/public/locales/zh-CN/common.json
+++ b/public/locales/zh-CN/common.json
@@ -68,6 +68,9 @@
  "post_num":"贴文数",
  "comment_num":"评论数",
  "niubi":"牛币",
+ "VERIFIED_ENGINE":"专业引擎",
+ "COMMUNITY":"社区引擎",
+ "NEWS":"机器人新闻",
 
 
  
