added sticky tab bar for the index feed and sticky sidebar for index feed

--- a/public/locales/zh-CN/common.json
+++ b/public/locales/zh-CN/common.json
@@ -4,7 +4,7 @@
    "submit": "提交",
    "cancel": "发送"
  },
- "post" : "发布",
+ "post" : "驱动",
  "TOO_MANY_REQUESTS" : "你在短时间内发出太多请求",
  "something_went_wrong" : "你运气不好，服务器发生了说不清道不明的错误",
  "post_too_short" : "你发的内容太短，必须大于一个字",
@@ -65,6 +65,7 @@
  "delete":"删除",
  "posts":"贴文",
  "comments":"评论",
+ "write_long_post":"写精致引擎",
  "post_num":"贴文数",
  "comment_num":"评论数",
  "niubi":"牛币",
