--- a/public/locales/zh-CN/common.json
+++ b/public/locales/zh-CN/common.json
@@ -77,6 +77,7 @@
  "notification":"通知",
  "link_copied":"链接已复制",
  "link_copied_failed":"你人品真烂，链接复制失败",
+ "post_place_holder":"发表信息，驱动真相...",
  
  "empty":""
 }
