文本和文件上传错误都可以完整显示，顺便修改了了字数提示圆圈的颜色，更符合主题色

--- a/public/locales/zh-CN/common.json
+++ b/public/locales/zh-CN/common.json
@@ -42,10 +42,14 @@
  "add_your_mood" : "选择情绪",
  "upload_file" : "上传文件",
  "upload_too_many" : "你能上传的数量是：",
- "upload_image_too_big" : "你能上传的最大图片是：",
+ "upload_image_too_big" : "没加会员不能传这么大的图，最高",
+ "upload_reading_error" : "读取你传的文件出错了，可能已经损坏",
+ "upload_image_too_small" : "传的图片容量太小了，不收",
  "upload_video_too_big" : "你能上传的最大视频是：",
  "upload_videos_too_big" : "你上传的所有视频总量超过了：",
- "" : "你上传的所有视频总量超过了：",
+ "too_many_files" : "目前允许你上传文件数量是：",
+ "upload_wrong_dimension" : "请确保上传的文件大于300x100，小于1920x1080.",
+ "image_not_loaded" : "图片无法读取，请检查一下",
  
  "register_success" : "注册成功！快去学习争取成为引擎",
  "private_engine" : "私人引擎",
