增加举报功能，但没有查看举报的功能。 牛逼。 修复了modal因为mouseup and down侦测而关闭modal的问题，

--- a/public/locales/zh-CN/common.json
+++ b/public/locales/zh-CN/common.json
@@ -5,7 +5,7 @@
    "cancel": "发送"
  },
  "post" : "驱动",
- "TOO_MANY_REQUESTS" : "你在短时间内发出太多请求",
+ "too_many_requests" : "你操作的太频繁了，休息一下吧",
  "something_went_wrong" : "你运气不好，服务器发生了说不清道不明的错误",
  "post_too_short" : "你发的内容太短，必须大于一个字",
  "post_too_long" : "你发的内容太长，必须小于5000字",
@@ -63,9 +63,20 @@
 
  "reply_comment":"回复",
  "login_before_like":"登录后才能点赞",
+ "login_before_report":"登录后才能举报",
  "show_replies":"查看回復",
  "hide_replies":"收起回復",
  "report":"举报",
+ "close":"关闭",
+ "report_failed":"举报失败",
+ "report_good":"举报成功",
+ "already_reported":"你已经举报过了",
+ "report_spam":"垃圾信息",
+ "report_PORN_VIOLENCE":"色情暴力",
+ "report_FRUAD":"诈骗/广告",
+ "report_EARMY":"网军",
+ "report_OTHER":"其他",
+ "report_desc":"请选择要举报的类型",
  "delete":"删除",
  "posts":"贴文",
  "comments":"评论",
