添加新闻机器人显示功能， 修复设置页面bug

--- a/public/locales/zh-CN/common.json
+++ b/public/locales/zh-CN/common.json
@@ -19,6 +19,7 @@
   "search": "搜索",
   "profile_page": "个人页面",
   "settings": "设置",
+  "change_profile": "改个人资料",
   "view_notifications": "查看通知",
   "open_user_menu": "大开用户菜单",
   "sign_in": "登录",
@@ -28,8 +29,8 @@
   "save_changes": "保存",
   "username": "用户名",
   "username_hint": "只能包含子母，数字和下划线",
-  "username_error_length": "长度大于7, 小于15",
-  "displayname_error_length": "长度大于2, 小于15",
+  "username_error_length": "长度大于7, 小于20",
+  "displayname_error_length": "长度大于2, 小于20",
   "input_box_empty_or_short": "内容为空或太短",
   "username_taken": "你运气不好，这个用户名早就被用了",
   "displayname": "给别人看的名称",
