--- a/public/locales/zh-CN/common.json
+++ b/public/locales/zh-CN/common.json
@@ -19,7 +19,7 @@
   "search": "搜索",
   "profile_page": "个人页面",
   "settings": "设置",
-  "change_profile": "改个人资料",
+  "change_profile": "修改资料",
   "view_notifications": "查看通知",
   "open_user_menu": "大开用户菜单",
   "sign_in": "登录",
